--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Shahruz's Blog</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-black-600 text-white min-h-screen flex justify-center py-16"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
